<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Best Cleaner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_app">ListAppActivity</string>
    <string name="botonDesintalar">Uninstall</string>
    <string name="title_activity_llamadas_mensajes">LlamadasMensajesActivity</string>
    <string name="limpiar">Clear History</string>
    <string name="limpiarlogs">Clear Logs</string>
    <string name="title_activity_cache">CacheActivity</string>
    <string name="nohaycache">There is not applications to clear its cache.</string>
    <string name="clearall">Clear All Cache</string>
    <string name="optimizer">Optimizer</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="app">Applications:</string>
    <string name="apps">0</string>
    <string name="espacio">Occupied:</string>
    <string name="cantidad">0 Bytes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_prueba_nombre">ACleaner</string>
    <string name="str_prueba_fecha">13/05/2014</string>
    <string name="str_prueba_byte">5,73 Kb</string>
    <string name="str_prueba_inf">Cache: 12 KB | Storage: 19,09 MB | Total: 19,21</string>

    <!-- Rate My Application -->
    <string name="rate_title">Rate</string>
    <string name="rate_comment_1">If you enjoy using</string>
    <string name="rate_comment_2">please take a moment to rate it. Thank you for your support!</string>
    <string name="ratemyapp_accept_button_label">Rate Now</string>
    <string name="ratemyapp_later_button_label">Remind me later</string>
    <string name="ratemyapp_cancel_button_label">No, thank you</string>

    /* for menu*/
    <string name="cache">Cache</string>
    <string name="callmessage">Call/Msg</string>
    <string name="appmanager">App Manager</string>
    <string name="history">History</string>
    <string name="cputemp">CPU Temperature</string>
    <string name="optiRam">Optimizer Ram</string>
    <string name="battery">Battery</string>

    /* header Title*/
    <string name="cache_title">CACHE</string>
    <string name="callmessge_title">Call/Message</string>
    <string name="appmanager_title">App Manager</string>
    <string name="history_title">History</string>
    <string name="ram_title">Optimizer Ram</string>
    <string name="battery_title">Battery</string>


    <string name="delete">Delete</string>
    <string name="IgnoreList">Ignore List</string>
    <string name="ignor">Ignore</string>
    <string name="selectApplication">Need to select an application!</string>
    <string name="voltage">Voltage</string>
    <string name="tempreture">Temperature</string>
    <string name="Capacity">Capacity</string>
    <string name="wifi">Wifi</string>
    <string name="off">OFF</string>
    <string name="tempreture_hard">Temperature: 28.3 ºC</string>
    <string name="volt_hard">Voltage: 4.335 V</string>
    <string name="cap_hard">Capacity: 2100 mAh</string>
    <string name="data">Data</string>
    <string name="Brightness">Brightness</string>
    <string name="Volumen">Volumen</string>
    <string name="GPS">GPS</string>
    <string name="Timeout">Time out</string>
    <string name="no_Data">There is not data to clear</string>
    <string name="cleanMessage">Your device has been cleaned!</string>
    <string name="clean">Cleaned</string>
    <string name="histrycache">History Cache of your applications</string>
    <string name="Storage">Storage</string>
    <string name="Total">Total</string>
    <string name="calls">Calls</string>
    <string name="incomecall">Incoming calls</string>
    <string name="outgoing">Outgoing</string>
    <string name="misscall">Missed calls</string>
    <string name="messgetext">Message of Text</string>
    <string name="recMessage">Received Messages</string>
    <string name="sendMessage">Sent Messages</string>
    <string name="needtoselect">\"Need to select at least an item!</string>
    <string name="cleaning">Cleaning...</string>
    <string name="nothingtoClean">Nothing to clean</string>
    <string name="totalDelete">Total Deleted Records</string>
    <string name="lookCleaner">Your device looks cleaner!</string>
    <string name="areErased">Are erased</string>
    <string name="inComOut">incoming / outgoing and missed calls</string>
    <string name="reSendMess">of text messages sent / received</string>
    <string name="canRelease">can be released</string>
    <string name="freeRamMem">\"Do you want to free RAM memory used by process</string>
    <string name="confirm">Confirm</string>
    <string name="Browser">Browser</string>
    <string name="Downloads">Downloads</string>
    <string name="Records">Records</string>
    <string name="Applications">Applications</string>
    <string name="Clipboard">Clipboard</string>
    <string name="Pag">Pag</string>
    <string name="doesFiles">Does media files?</string>
    <string name="musicfiles">It will remove the music files, video and photography in your Downloads folder.</string>
    <string name="onceDelete">Once deleted these files, can not be recovered.</string>
    <string name="Include">Include</string>
    <string name="Exclude">Exclude</string>
    <string name="needToSelectOne">Need to select at least an item!</string>
    <string name="deviceCleaner">Your device has been cleaned!</string>
    <string name="histroyBrowse">He wiped the History Browser</string>
    <string name="Hewiped">He wiped</string>
    <string name="downHistory">download History</string>
    <string name="mediafile">history of media files</string>
    <string name="wipeClip">Historical wiped your clipboard</string>


    <array name="packer_name_default">
        <item>system</item>
        <item>com.android.systemui</item>
        <item>com.android.phone</item>
        <item>com.android.nfc</item>
        <item>com.android.inputmethod.latin</item>
        <item>com.google.android.inputmethod.latin</item>
        <item>com.android.mms</item>
        <item>com.google.android.deskclock</item>
        <item>com.android.deskclock</item>
        <item>com.android.defcontainer</item>
        <item>com.android.launcher</item>
        <item>com.android.bluetooth</item>
        <item>com.google.android.googlequicksearchbox</item>
        <item>com.google.android.launcher</item>
    </array>

    <string name="admob_banner_unit_id">ca-app-pub-6412945761525539/1638694408</string>
    <!--9022360406</string>-->

    <string name="facebook_app_id">480911548772837</string>

    <string name="Ram_title">Memory Usage is Heavy</string>
    <string name="Rame_text">Release over used RAM</string>
    <string name="Cache_title">Cache Usage is Heavy</string>
    <string name="Cache_text">Release over used cache</string>
    <string name="Ticker_text">Boost you device !</string>

    <string name="cpuTemper_title">CPU is hot !</string>
    <string name="cpuTicker_text">Cool Down CPU !</string>
    <string name="cpu_text">Cool Down the overheated CPU.</string>

    <string name="Low_Battery_Title">Low Battery !</string>
    <string name="Low_Battery_Content_Text">Connect your device to power</string>
    <string name="Low_Battery_Ticker_Text">Low Battery !</string>


</resources>
