<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linear_uno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2c3e50"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:text="@string/app"
            android:textColor="@color/white_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/numeroapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/texto"
            android:text="@string/apps"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/cantidad"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/espacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/cantidad"
            android:text="@string/espacio"
            android:textColor="@color/white_color"
            android:textSize="12sp"
            tools:ignore="ObsoleteLayoutParam" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            style="@style/button_stype"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:background="@color/bg_color"
            android:text="@string/clearall" />
        <!--style="@style/button_text"-->

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_unit_id"
            android:visibility="gone" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout"
        android:layout_below="@+id/linear_uno"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:listSelector="@android:color/transparent" />

    <TextView
        android:id="@+id/cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/nohaycache"
        android:textColor="@color/black_light"
        android:textSize="14sp"
        android:visibility="gone" />

</RelativeLayout>