<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_color">

    <RelativeLayout
        android:id="@+id/item_fijo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_card_background"
        android:padding="8dp">

        <ImageView
            android:id="@+id/velocimetro"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/velocimetro" />

        <ImageView
            android:id="@+id/aguja"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/aguja" />

        <ImageView
            android:id="@+id/state"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/usb" />

        <!--<TextView
            android:id="@+id/text_time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/velocimetro"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="Time left:"
            android:textColor="#F16521"
            android:textSize="16sp" />-->

        <!--<TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_below="@id/text_time_left"
            android:layout_toRightOf="@+id/velocimetro"
            android:gravity="center"
            android:text="49h 10m"
            android:textColor="#F16521"
            android:textSize="38sp" />-->

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@+id/aguja"
            android:gravity="center"
            android:text="@string/tempreture_hard"
            android:textColor="@color/black_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_temperature"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/aguja"
            android:gravity="center"
            android:text="@string/volt_hard"
            android:textColor="@color/black_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_voltage"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/aguja"
            android:gravity="center"
            android:text="@string/cap_hard"
            android:textColor="@color/black_light"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_unit_id"
            android:visibility="gone" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="380dp"
        android:layout_above="@id/layout"
        android:layout_below="@+id/item_fijo"
        android:columnWidth="90dp"
        android:fadingEdge="none"
        android:horizontalSpacing="10dp"
        android:listSelector="#00000000"
        android:numColumns="2"
        android:padding="12dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />


</RelativeLayout>